DE1439: Setup Wizard-IE10 Issue- Device names are not aligned properly in the dropdown -- fixed

--- a/docroot/css/site/mdo/vv_styles.css
+++ b/docroot/css/site/mdo/vv_styles.css
@@ -469,6 +469,7 @@ div#iconpromo2{
     font-size: 15px;
     vertical-align: middle;
     padding: 0;
+    text-align: left;
 }
 
 #displayDevices .icon{
